@@ -1,5 +1,5 @@
 /**
- * Copyright (C) 2011, Sam Clarke (samclarke.com)
+ * Copyright (C) 2012, Sam Clarke (samclarke.com)
  *
  * SCEditor is dual licensed under the MIT and GPL licenses:
  *	http://www.opensource.org/licenses/mit-license.php
