@@ -1,0 +1,42 @@
+/**
+ * Copyright (C) 2012, Sam Clarke (samclarke.com)
+ *
+ * SCEditor is dual licensed under the MIT and GPL licenses:
+ *	http://www.opensource.org/licenses/mit-license.php
+ *	http://www.gnu.org/licenses/gpl.html
+ *
+ * Icons by Mark James (http://www.famfamfam.com/lab/icons/silk/)
+ * Licensed under the Creative Commons CC-BY license (http://creativecommons.org/licenses/by/3.0/)
+ */
+
+@import "office-toolbar.less";
+
+.sceditor-container {
+	background: rgb(163,194,234);
+	background: -moz-linear-gradient(top, rgba(163,194,234,1) 0%, rgba(109,146,193,1) 39%, rgba(87,127,179,1) 64%, rgba(101,145,204,1) 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(163,194,234,1)), color-stop(39%,rgba(109,146,193,1)), color-stop(64%,rgba(87,127,179,1)), color-stop(100%,rgba(101,145,204,1)));
+	background: -webkit-linear-gradient(top, rgba(163,194,234,1) 0%,rgba(109,146,193,1) 39%,rgba(87,127,179,1) 64%,rgba(101,145,204,1) 100%);
+	background: -o-linear-gradient(top, rgba(163,194,234,1) 0%,rgba(109,146,193,1) 39%,rgba(87,127,179,1) 64%,rgba(101,145,204,1) 100%);
+	background: -ms-linear-gradient(top, rgba(163,194,234,1) 0%,rgba(109,146,193,1) 39%,rgba(87,127,179,1) 64%,rgba(101,145,204,1) 100%);
+	background: linear-gradient(top, rgba(163,194,234,1) 0%,rgba(109,146,193,1) 39%,rgba(87,127,179,1) 64%,rgba(101,145,204,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a3c2ea', endColorstr='#6591cc',GradientType=0 );
+}
+
+
+.sceditor-container iframe,
+.sceditor-container textarea {
+	border: 1px solid #646464;
+	background: #fff;
+	margin: 7px 40px;
+	padding: 20px;
+
+	-webkit-box-shadow:	inset 0 1px 0 0 #d5e3f1,
+				inset 0 -1px 0 0 #e3edfb,
+				inset 1px 0 0 0 #cddcef,
+				inset -1px 0 0 0 #b8ceea;
+	-moz-box-shadow:	inset 0 1px 0 0 #d5e3f1,
+				inset 0 -1px 0 0 #e3edfb,
+				inset 1px 0 0 0 #cddcef,
+				inset -1px 0 0 0 #b8ceea;
+	box-shadow:	1px 1px 5px #293a52;
+}
