@@ -16,6 +16,8 @@ Version 1.3.5:
 	Added expandToContent method
 	Reorgernised themes to their own directory.
 	Changed themes to be in .less format and added to build file
+	Added modern theme
+	Added office-toolbar and office themes
 
 Version 1.3.4:
 	Updated focus method to work in source mode
